Update on Talker and Listener. Created Log Console and About.

--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -13,10 +13,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.606"
+        app:layout_constraintVertical_bias="0.0"
         custom:JV_backgroundColor="#25221e"
         custom:JV_borderColor="@color/black"
         custom:JV_borderWidth="4dp"
@@ -28,15 +28,18 @@
         android:id="@+id/speedSlider"
         android:layout_width="334dp"
         android:layout_height="55dp"
-        android:maxHeight="100dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:max="100"
+        android:maxHeight="100dp"
         android:progress="0"
 
         android:progressDrawable="@drawable/seek_bar"
-
+        android:rotation="-90"
         android:thumb="@drawable/seek_thumb"
-        app:layout_constraintBottom_toTopOf="@+id/joystickview"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/joystickview"
+        app:layout_constraintHorizontal_bias="0.411"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
