--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -9,8 +9,9 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:layout_width="196dp"
-        android:layout_height="202dp"
+        android:id="@+id/frameLayout"
+        android:layout_width="199dp"
+        android:layout_height="329dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,12 +27,31 @@
             android:text="@string/monotor" />
 
         <Button
-            android:id="@+id/sair"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="250dp"
+            android:width="200dp"
+            android:text="@string/sair" />
+
+        <Button
+            android:id="@+id/log"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="150dp"
             android:width="200dp"
-            android:text="@string/sair" />
+            android:onClick="onMenuItemSelected"
+
+            android:text="@string/log" />
+
+        <Button
+            android:id="@+id/sobre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="200dp"
+            android:width="200dp"
+            android:onClick="onMenuItemSelected"
+
+            android:text="@string/sobre" />
 
         <Button
             android:id="@+id/control"
@@ -50,6 +70,7 @@
             android:width="200dp"
             android:onClick="onMenuItemSelected"
             android:text="@string/trajloc" />
+
     </FrameLayout>
 
     <TextView
